Event model and full MVC

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,6 +3,10 @@
 Listing was generated at <%= @time %>
 <ul>
 	<% @events.each do |event| %>
-		<li><%= event %></li>
+		<li>
+		<strong><%= event.name %></strong>
+		<%= event.location %>:
+		<%= number_to_currency(event.price) %>
+		</li>
 	<% end %>
 </ul>
