--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,24 @@
-<h1><%= @events.size %> Events</h1>
+<h1><%= pluralize(@events.size,"Event") %></h1>
 
 Listing was generated at <%= @time %>
-<ul>
+
 	<% @events.each do |event| %>
-		<li>
-		<strong><%= event.name %></strong>
-		<%= event.location %>:
-		<%= number_to_currency(event.price) %>
-		</li>
+		<article>
+			<header><h2><%= event.name %></h2></header>
+		</article>
+		<p><%= truncate(event.description,length: 35, separator: ' ')%></p>
+		<table>
+			<tr>
+				<th>When:</th>
+				<td><%= event.starts_at.to_s(:default) %></td>
+			</tr>
+			<tr>
+				<th>Where:</th>
+				<td><%= event.location %></td>
+			</tr>
+			<tr>
+				<th>Price:</th>
+					<td><%= format_price(event) %></td>
+			</tr>
+		</table>
 	<% end %>
-</ul>
