--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,4 +18,5 @@
 			</tr>
 		</table>
 
-		<%= link_to 'All Events', events_path %>
+		<%= link_to 'All Events', events_path %> |
+		<%= link_to 'Edit Event', edit_event_path(@event) %>
