--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,10 @@
-<h1><%= pluralize(@events.size,"Event") %></h1>
+	<h1><%= pluralize(@events.size,"Event") %></h1>
 
-Listing was generated at <%= @time %>
-
+	Listing was generated at <%= @time %>
+	<br>
+	<br>
+	<%= link_to content_tag(:strong,'Add New Event'), new_event_path %>
+	<br>
 	<% @events.each do |event| %>
 		<article>
 			<header><h2><%= link_to(event.name, event) %></h2></header>
