--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,27 +1,3 @@
 <h1>Editing <%= @event.name %></h1>
 
-<%= form_for @event do |f| %>
-	<p>
-		<%= f.label :name %><br/>
-		<%= f.text_field :name %>
-	</p>
-	<p>
-		<%= f.label :description %><br/>
-		<%= f.text_area :description, cols: 40, rows: 7 %>
-	</p>
-	<p>
-		<%= f.label :location %><br/>
-		<%= f.text_field :location %>
-	</p>
-	<p>
-		<%= f.label :price %><br/>
-		<%= f.number_field :price %>
-	</p>
-	<p>
-		<%= f.label :starts_at %><br/>
-		<%= f.datetime_select :starts_at %>
-	</p>
-	<p>
-		<%= f.submit %>
-	</p>
-<% end %>
+<%= render "form" %>
