image and capacity to event

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,6 +21,14 @@
 		<%= f.datetime_select :starts_at %>
 	</p>
 	<p>
+		<%= f.label :image_file_name %><br/>
+		<%= f.text_field :image_file_name, size: 30, placeholder: "GIF,JPG or PNG file name" %>
+	</p>
+	<p>
+		<%= f.label :capacity %><br/>
+		<%= f.number_field :capacity %>
+	</p>
+	<p>
 		<%= f.submit %> | 
 		<%= link_to 'Cancel', events_path %>
 	</p>
