--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,9 @@
 
 		<article>
-			<header><h2><%= @event.name %></h2></header>
+			<header>
+				<%= image_for(@event) %>
+				<h1><%= @event.name %></h1>
+			</header>
 		</article>
 		<p><%= truncate(@event.description,length: 35, separator: ' ')%></p>
 		<table>
@@ -15,6 +18,10 @@
 			<tr>
 				<th>Price:</th>
 					<td><%= format_price(@event) %></td>
+			</tr>
+			<tr>
+				<th>Capacity:</th>
+				<td><%= pluralize(@event.capacity, 'spot')%></td>
 			</tr>
 		</table>
 
