--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,9 @@
  *
  *= require_tree .
  *= require_self
+ *= require layout
+ *= require elements
+ *= require events
+ *= require buttons
+ *= require forms
  */
