--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Editing <%= @event.name %></h1>
+<header class="content-header">
+  <h1>Editing <%= @event.name %></h1>
+</header>
+
 
 <%= render "form" %>
