--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,30 +1,30 @@
-	<h1><%= pluralize(@events.size,"Event") %></h1>
-
-	Listing was generated at <%= @time %>
-	<br>
-	<br>
-	<%= link_to content_tag(:strong,'Add New Event'), new_event_path %>
-	<br>
-	<% @events.each do |event| %>
-		<article>
-			<header>
-			<%= image_for(event) %>
-			<h2><%= link_to(event.name, event) %></h2></header>
-			<h3><%= pluralize(event.capacity,"spot") %></h3>
-		</article>
-		<p><%= truncate(event.description,length: 35, separator: ' ')%></p>
-		<table>
-			<tr>
-				<th>When:</th>
-				<td><%= event.starts_at.to_s(:default) %></td>
-			</tr>
-			<tr>
-				<th>Where:</th>
-				<td><%= event.location %></td>
-			</tr>
-			<tr>
-				<th>Price:</th>
-					<td><%= format_price(event) %></td>
-			</tr>
-		</table>
-	<% end %>
+<ul class="events">
+  <% @events.each do |event| %>
+    <li>
+      <article class="event">
+        <header>
+          <%= image_for(event) %>
+          <h2><%= link_to(event.name, event) %></h2>
+          <h3><%= pluralize(event.capacity, 'spot') %></h3>
+        </header>
+        <p>
+          <%= truncate(event.description, length: 150, separator: ' ') %>
+        </p>
+        <table>
+          <tr>
+            <th>When</th>
+            <td><%= event.starts_at %></td>
+          </tr>
+          <tr>
+            <th>Where</th>
+            <td><%= event.location %></td>
+          </tr>
+          <tr>
+            <th>Price</th>
+            <td><%= format_price(event) %></td>
+          </tr>
+        </table>
+      </article>
+    </li>
+  <% end %>
+</ul>
