--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,30 +1,36 @@
+<article id="event" class="event">
+  <header>
+    <%= image_for(@event) %>
+    <h1><%= @event.name %></h1>
+    <h2><%= @event.starts_at %></h2>
+  </header>
+  
+  <p>
+    <%= @event.description %>
+  </p>
+  
+  <h3>Price</h3>
+  <p>
+    <%= format_price(@event) %>
+  </p>
+  
+  <h3>Location</h3>
+  <p>
+    <%= @event.location %>
+  </p>
+  
+  <h3>Capacity</h3>
+  <p>
+    <%= pluralize(@event.capacity, 'spot') %>
+  </p>
+  
+  <footer>
+    <nav>
+      <%= link_to 'Edit', edit_event_path(@event), class: 'button' %>
+      <%= link_to 'Delete', @event, 
+                  class: 'button',
+                  method: :delete, data: { confirm: 'Are you sure?' } %>
+    </nav>
+  </footer>
+</article>
 
-		<article>
-			<header>
-				<%= image_for(@event) %>
-				<h1><%= @event.name %></h1>
-			</header>
-		</article>
-		<p><%= truncate(@event.description,length: 35, separator: ' ')%></p>
-		<table>
-			<tr>
-				<th>When:</th>
-				<td><%= @event.starts_at.to_s(:default) %></td>
-			</tr>
-			<tr>
-				<th>Where:</th>
-				<td><%= @event.location %></td>
-			</tr>
-			<tr>
-				<th>Price:</th>
-					<td><%= format_price(@event) %></td>
-			</tr>
-			<tr>
-				<th>Capacity:</th>
-				<td><%= pluralize(@event.capacity, 'spot')%></td>
-			</tr>
-		</table>
-
-		<%= link_to 'All Events', events_path %> |
-		<%= link_to 'Edit Event', edit_event_path(@event) %> |
-		<%= link_to 'Delete', event_path(@event), method: :delete, data: {confirm: 'Are you sure?'} %>
