--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@event) do |f| %>
-<%= render 'shared/errors' %>
+<%= render 'shared/errors', object: @event %>
   <fieldset>
     <ol>
       <li class="required">
