--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,13 +1,13 @@
-<% if @event.errors.any? %>
+<% if object.errors.any? %>
 	<section id="errors">
 		<header>
 			<h2>Oops! Your form could not be saved.</h2>
 			<h3>Please correct the following
-					<%= pluralize(@event.errors.count, "error")%>:
+					<%= pluralize(object.errors.count, "error")%>:
 			</h3>
 		</header>
 		<ul>
-			<% @event.errors.full_messages.each do |message| %>
+			<% object.errors.full_messages.each do |message| %>
 				<li><%= message %></li>
 			<% end %>
 		</ul>
