--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,10 @@
 <header class="page-header">
   <div class="masthead">
 			<h1><%= link_to 'Eventz', root_path %></h1>
+			<nav>
+				<p>
+					<%= link_to 'Sign Up', signup_path, class: "button" %>
+				</p>
+			</nav>
 	</div>
 </header>
