--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,12 @@
 			<h1><%= link_to 'Eventz', root_path %></h1>
 			<nav>
 				<p>
-					<%= link_to 'Sign Up', signup_path, class: "button" %>
+					<% if current_user %>
+						<%= link_to current_user.name, current_user %>
+					<% else %>
+						<%= link_to 'Sign Up', signup_path, class: "button" %>
+						<%= link_to 'Sign In', new_session_path, class: "button" %>
+					<% end %>
 				</p>
 			</nav>
 	</div>
