--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,10 +30,12 @@
 			(<%= pluralize(@event.spots_left, 'spot') %> available)
 		</p>
     <nav>
-      <%= link_to 'Edit', edit_event_path(@event), class: 'button' %>
-      <%= link_to 'Delete', @event, 
-                  class: 'button',
-                  method: :delete, data: { confirm: 'Are you sure?' } %>
+			<% if current_user_admin? %>
+				<%= link_to 'Edit', edit_event_path(@event), class: 'button' %>
+				<%= link_to 'Delete', @event, 
+										class: 'button',
+										method: :delete, data: { confirm: 'Are you sure?' } %>
+			<% end %>
     </nav>
   </footer>
 </article>
