--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,17 @@
 		<h1><%= @user.name %></h1>
 		<h2><%= @user.email %></h2>
 	</header>
+	<% if @registrations.any? %>
+		<h3>Registered For</h3>
+		<ul>
+			<% @registrations.each do |registration| %>
+					<li>
+						<%= link_to registration.event.name, registration.event %>
+						(<%= time_ago_in_words(registration.created_at) %> ago)
+					</li>
+			<% end %>
+		</ul>
+	<% end %>
 	<footer>
 		<nav>
 			<% if current_user?(@user) %>
