--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,6 +8,27 @@
   <p>
     <%= @event.description %>
   </p>
+
+	<p>
+		<%= pluralize(@likers.size,"like") %>
+	</p>
+	<% if current_user %>
+		<% if @current_like %>
+				<%= button_to "Unlike", event_like_path(@event, @current_like), method: :delete %>
+		<% else %>
+				<%= button_to "Like", event_likes_path(@event) %>
+		<% end %>
+	<% end %>
+	<% if @likers.any? %>
+		<h3>Likers</h3>
+		<ul>
+			<% @likers.each do |user| %>
+				<li>
+					<%= link_to user.name, user %>
+				</li>
+			<% end %>
+		</ul>
+	<% end %>
   
   <h3>Price</h3>
   <p>
