specific layout content

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, @event.name) %>
 <article id="event" class="event">
   <header>
     <%= image_for(@event) %>
@@ -19,26 +20,6 @@
 				<%= button_to "Like", event_likes_path(@event) %>
 		<% end %>
 	<% end %>
-	<% if @likers.any? %>
-		<h3>Likers</h3>
-		<ul>
-			<% @likers.each do |user| %>
-				<li>
-					<%= link_to user.name, user %>
-				</li>
-			<% end %>
-		</ul>
-	<% end %>
-
-	<h3>Categories</h3>
-		<ul>
-			<% @categories.each do |category| %>
-				<li>
-					<%= category.name %>
-				</li>
-			<% end %>
-		</ul>
-
   
   <h3>Price</h3>
   <p>
@@ -71,3 +52,26 @@
   </footer>
 </article>
 
+
+<% content_for(:side) do %>
+		<% if @likers.any? %>
+			<h3>Likers</h3>
+			<ul>
+				<% @likers.each do |user| %>
+					<li>
+						<%= link_to user.name, user %>
+					</li>
+				<% end %>
+			</ul>
+		<% end %>
+		<% if @categories.any? %>
+	<h3>Categories</h3>
+		<ul>
+			<% @categories.each do |category| %>
+				<li>
+					<%= category.name %>
+				</li>
+			<% end %>
+		</ul>	
+	<% end %>
+<% end %>
