--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,23 @@
+<% content_for(:title, @user.name) %>
 <article class="user">
 	<header>
 		<h1><%= @user.name %></h1>
 		<h2><%= @user.email %></h2>
 	</header>
-	<% if @liked_events.any? %>
-		<h3>Liked events</h3>
-		<ul>
-			<% @liked_events.each do |event| %>
-				<li>
-					<%= link_to event.name, event %>
-				</li>
-			<% end %>
-		</ul>
+
+	<%= content_for :side do %>
+		<% if @liked_events.any? %>
+			<h3>Liked events</h3>
+			<ul>
+				<% @liked_events.each do |event| %>
+					<li>
+						<%= link_to event.name, event %>
+					</li>
+				<% end %>
+			</ul>
+		<% end %>
 	<% end %>
+
 	<% if @registrations.any? %>
 		<h3>Registered For</h3>
 		<ul>
