--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -128,7 +128,7 @@ aside.sidebar {
         padding: 4px 0;
         padding-left: 25px;
 
-        &.upcoming-events a {
+        &.events a {
           display: block;
           background: image_url("arrow.png") no-repeat 10px 8px;
           padding-left: 35px;
