--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,8 @@
 <% if object.errors.any? %>
 	<section id="errors">
 		<header>
-			<h2>Oops! Your form could not be saved.</h2>
-			<h3>Please correct the following
-					<%= pluralize(object.errors.count, "error")%>:
-			</h3>
+			<h2><%= t('.title') %></h2>
+			<h3><%= t('.title_about')%></h3>
 		</header>
 		<ul>
 			<% object.errors.full_messages.each do |message| %>
