--- a/app/assets/stylesheets/elements.scss
+++ b/app/assets/stylesheets/elements.scss
@@ -16,6 +16,14 @@ a {
   text-decoration: underline;
 }
 
+a.locale {
+	opacity: 0.5;
+}
+
+a.locale.active {
+	opacity: 1;
+}
+
 a:link,
 a:visited {
   color: $primary-link-color;
@@ -25,5 +33,6 @@ a:hover,
 a:active {
   text-decoration: none;
   color: $secondary-link-color;
-  background: $secondary-background-color;
+	background: $secondary-background-color;
+	opacity: 1;
 }
