--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,5 @@
 <header class="content-header">
-  <h1>Editing <%= @event.name %></h1>
+  <h1><%= t('.edit') %> <%= @event.name %></h1>
 </header>
 
 
