--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,7 @@
   <header>
     <%= image_for(@event) %>
     <h1><%= @event.name %></h1>
-    <h2><%= @event.starts_at %></h2>
+    <h2><%= I18n.l(@event.starts_at, format: :default)%></h2>
   </header>
   
   <p>
@@ -15,38 +15,38 @@
 	</p>
 	<% if current_user %>
 		<% if @current_like %>
-				<%= button_to "Unlike", event_like_path(@event, @current_like), method: :delete %>
+				<%= button_to t('common.unlike'), event_like_path(@event, @current_like), method: :delete %>
 		<% else %>
-				<%= button_to "Like", event_likes_path(@event) %>
+				<%= button_to t('common.like'), event_likes_path(@event) %>
 		<% end %>
 	<% end %>
   
-  <h3>Price</h3>
+  <h3><%= t('.price') %></h3>
   <p>
     <%= format_price(@event) %>
   </p>
   
-  <h3>Location</h3>
+  <h3><%= t('.location') %></h3>
   <p>
     <%= @event.location %>
   </p>
   
-  <h3>Capacity</h3>
+  <h3><%= t('.capacity') %></h3>
   <p>
-    <%= pluralize(@event.capacity, 'spot') %>
+    <%= t('.spots', count: @event.capacity) %>
   </p>
-  <%= link_to 'Who\'s Registered?', event_registrations_path(@event) %>
+  <%= link_to t('.registered'), event_registrations_path(@event) %>
   <footer>
 		<%= register_link(@event) %>
 		<p>
-			(<%= pluralize(@event.spots_left, 'spot') %> available)
+			(<%= t('events.index.spots_left',count: @event.spots_left) %>)
 		</p>
     <nav>
 			<% if current_user_admin? %>
-				<%= link_to 'Edit', edit_event_path(@event), class: 'button' %>
-				<%= link_to 'Delete', @event, 
+				<%= link_to t('common.edit'), edit_event_path(@event), class: 'button' %>
+				<%= link_to t('common.delete'), @event, 
 										class: 'button',
-										method: :delete, data: { confirm: 'Are you sure?' } %>
+										method: :delete, data: { confirm: t('common.confirm') } %>
 			<% end %>
     </nav>
   </footer>
@@ -55,7 +55,7 @@
 
 <% content_for(:side) do %>
 		<% if @likers.any? %>
-			<h3>Likers</h3>
+			<h3><%= t('.likers') %></h3>
 			<ul>
 				<% @likers.each do |user| %>
 					<li>
@@ -65,7 +65,7 @@
 			</ul>
 		<% end %>
 		<% if @categories.any? %>
-	<h3>Categories</h3>
+	<h3><%= t('.cats') %></h3>
 		<ul>
 			<% @categories.each do |category| %>
 				<li>
