--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,5 @@
  *= require buttons
  *= require forms
  */
+@import "selectize/dist/css/selectize";
+@import "selectize/dist/css/selectize.default";
