--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -34,8 +34,14 @@
 			<li>
 				<%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
 			</li>
+			<li>
+				<select class="selectize" multiple>
+					<% Category.all.each do |category| %>
+						<option value=<%= "#{category.id}" %>%><%= category.name %></option>
+					<% end %>
+				</select>
+			</li>
     </ol>
-		<input type="text" class="selectize">
     <p>
       <%= f.submit %>
       <%= link_to t("common.cancel"), events_path, class: 'button' %>
