Revert "add selectize css asset"
This reverts commit 9fa96e38ab1ae3204fa65b92b87add47239c71aa.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,5 +18,5 @@
  *= require buttons
  *= require forms
  */
-@import "./selectize/selectize";
-@import "./selectize/selectize.default";
+@import "selectize/dist/css/selectize";
+@import "selectize/dist/css/selectize.default";
