--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,9 +27,8 @@
         <%= f.number_field :capacity, size: 6 %>
       </li>
       <li class="required">
-        <%= f.label :image_file_name %>
-        <%= f.text_field :image_file_name, size: 30, 
-                         placeholder: "GIF, JPG, or PNG file name" %>
+				<%= f.label :main_image %>
+				<%= f.file_field :main_image %>
       </li>
 			<li>
 				<%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
