add styles to events layout

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,6 +20,6 @@
 
 <% if current_user_admin? %>
   <section class="admin">
-    <%= link_to "Add New Event", new_event_path, class: "button" %>
+    <%= link_to t('layouts.sidebar.add_new_event'), new_event_path, class: "button" %>
   </section>
 <% end %>
