--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,3 @@
-<header class="content-header">
-  <h1><%= t('.edit') %> <%= @event.name %></h1>
-</header>
+<h1><%= t('.edit') %> <%= @event.name %></h1>
 
-
-<%= render "form" %>
+<%= render "form", event: @event %>
