--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,9 +1,8 @@
 <% if object.errors.any? %>
-	<section id="errors">
-		<header>
-			<h2><%= t('.title') %></h2>
-			<h3><%= t('.title_about')%></h3>
-		</header>
+	<section class="errors">
+		<h2><%= t('.title') %></h2>
+		<h3><%= t('.title_about')%></h3>
+				
 		<ul>
 			<% object.errors.full_messages.each do |message| %>
 				<li><%= message %></li>
