--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<header class="content-header">
-	<h1><%= t('layouts.header.sign_up')%></h1>
-</header>
+<h1><%= t('layouts.header.sign_up')%></h1>
 
-<%= render 'form' %>
+<%= render "form", user: @user %>
