--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,50 +1,37 @@
-<%= form_for(@event) do |f| %>
-<%= render 'shared/errors', object: @event %>
-  <fieldset>
-    <ol>
-      <li class="required">
-        <%= f.label :name %>
-        <%= f.text_field :name, autofocus: true %>
-      </li>
-      <li class="required">
-        <%= f.label :description %>
-        <%= f.text_area :description, cols: 40, rows: 7 %>
-      </li>
-      <li class="required">
-        <%= f.label :location %>
-        <%= f.text_field :location, size: 30 %>
-      </li>
-      <li class="required">
-        <%= f.label :price %>
-        <%= f.number_field :price, size: 6 %>
-      </li>
-      <li class="required">
-        <%= f.label :starts_at %>
-        <%= f.datetime_select :starts_at %>
-      </li>
-      <li class="required">
-        <%= f.label :capacity %>
-        <%= f.number_field :capacity, size: 6 %>
-      </li>
-      <li class="required">
-        <%= f.label :image_file_name %>
-        <%= f.text_field :image_file_name, size: 30, 
-                         placeholder: "GIF, JPG, or PNG file name" %>
-      </li>
-			<li>
-				<%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
-			</li>
-			<li>
-				<select class="selectize" multiple>
-					<% Category.all.each do |category| %>
-						<option value=<%= "#{category.id}" %>%><%= category.name %></option>
-					<% end %>
-				</select>
-			</li>
-    </ol>
-    <p>
-      <%= f.submit %>
-      <%= link_to t("common.cancel"), events_path, class: 'button' %>
-    </p>
-  </fieldset>
+<%= form_with(model: event, local: true) do |f| %>
+	<%= render 'shared/errors', object: event %>
+
+		<%= f.label :name %>
+		<%= f.text_field :name, autofocus: true %>
+
+		<%= f.label :description %>
+		<%= f.text_area :description, cols: 40, rows: 7 %>
+	
+		<%= f.label :location %>
+		<%= f.text_field :location, size: 30 %>
+	
+		<%= f.label :price %>
+		<%= f.number_field :price, size: 6 %>
+	
+		<%= f.label :starts_at %>
+		<%= f.datetime_select :starts_at, {discard_type: true}, {class: "datetime"} %>
+	
+		<%= f.label :capacity %>
+		<%= f.number_field :capacity, size: 6 %>
+	
+		<%= f.label t('common.image_label') %>
+		<%= f.file_field :main_image %>
+	
+	<div class="checkboxes">
+		<%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
+	</div>
+	
+	<select class="selectize" multiple>
+			<% Category.all.each do |category| %>
+				<option value=<%= "#{category.id}" %>%><%= category.name %></option>
+			<% end %>
+		</select>
+	
+	<%= f.submit %>
+	<%= link_to t("common.cancel"), events_path, class: 'button' %>
 <% end %>
