--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -7,14 +7,14 @@
             <% end %>
         <% end %>
     </div>
-<%= form.label(:password, "Enter New Password: ") %>
+<%= form.label(:password, t('.new_pass')) %>
 <%= form.password_field(:password) %>
 </br>
 
-<%= form.label(:confirm_password, "Confirm New Password: ") %>
+<%= form.label(:confirm_password, t('.confirm')) %>
 <%= form.password_field(:confirm_password) %>
 
 <%= form.hidden_field(id: :reset_password_token) %>
-<%= form.submit "Update Password" %>
+<%= form.submit t('.update') %>
 
 <% end %>
