--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(url: password_resets_path) do |form| %>
 
-<%= form.label(:email, "Enter The Email Address Associated With Your Account: ") %>
+<%= form.label(:email, t('.enter_email')) %>
     <div id="send_reset_email_errors" >
         <% if flash[:notice] %>
             <p class="error"><%= flash[:notice] %></p>
@@ -8,6 +8,6 @@
     </div>
 <%= form.text_field(:email) %>    
 </br>
-<%= form.submit("Reset Password", id: "reset_password_submit") %>
+<%= form.submit(t('.reset'), id: "reset_password_submit") %>
 
 <% end %>
