--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,6 +1,5 @@
-To reset your password click the link below:
+<%= t('.reset_header')%>
 
 <%= edit_password_reset_url(id: @user.reset_password_token) %>
 
-If you did not request to change your password just 
-ignore this email and your password will stay the same.
+<%= t('.reset_body')%>
