add action_text to views

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,7 +5,7 @@
 		<%= f.text_field :name, autofocus: true %>
 
 		<%= f.label :description %>
-		<%= f.text_area :description, cols: 40, rows: 7 %>
+		<%= f.rich_text_area :description %>
 
 		<%= f.label :location %>
 		<%= f.text_field :location, size: 30 %>
