--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,21 +1,12 @@
 <h1><%= t('registrations.index.registrations') %> <%= link_to @event.name, @event %></h1>
 
 
-<%= form_with(model: [@event, @registration], local: true, id: "payment-form") do |f| %>
+<%= form_with(model: [@event, @registration], local: true) do |f| %>
 <%= render 'shared/errors', object: @registration %>
-	<div class="form-group">
-		<label for="card-element">Credit or debit card</label>
-		<div id="card-element" class="form-control"></div>
-		<div id="card-errors" role="alert"></div>
-	</div>
-	<div class="form-group">
-		<%= f.label :name_on_card %>
-		<%= f.text_field :name_on_card, id: "name_on_card", placeholder: "Full name", class: "form-control" %>
-	</div>
+
 	<%= f.label t('.how_heard') %>
 	<%= f.select :how_heard, Registration::HOW_HEARD_OPTIONS, prompt:  t('.pick') %>
 
-	<%= f.hidden_field :plan, value: "#" %>
 	<%= f.submit t('.new') %>
 	<%= link_to t('common.cancel'), events_path, class: 'button' %>
 
