--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,16 +13,16 @@
 	<% end %>	
 	<ul class="left">
       <li>
-        <%= link_to  t('.upcoming'), events_path %>
+        <%= link_to  t('layouts.header.upcoming'), events_path %>
       </li>
       <li>
-        <%= link_to t('.past'), filtered_events_path(:past)%>
+        <%= link_to t('layouts.header.past'), filtered_events_path(:past)%>
       </li>
       <li>
-        <%= link_to t('.free'), filtered_events_path(:free)%>
+        <%= link_to t('layouts.header.free'), filtered_events_path(:free)%>
       </li>
       <li>
-        <%= link_to t('.recent'), filtered_events_path(:recent)%>
+        <%= link_to t('layouts.header.recent'), filtered_events_path(:recent)%>
       </li>
 	</ul>
   <ul class="right">
@@ -30,12 +30,12 @@
 						<li><%= link_to "Рус", {locale: :ru}, class: "#{ 'active' if I18n.locale == :ru }"  %></li>
 						<li><%= link_to "Eng", {locale: :en}, class: "#{ 'active' if I18n.locale == :en }" %></li>
 						<li><%= link_to current_user.name, current_user %></li>
-						<li><%= link_to t('.sign_out'), session_path, method: :delete, class: "button" %></li>
+						<li><%= link_to t('layouts.header.sign_out'), session_path, method: :delete, class: "button" %></li>
 					<% else %>
 						<li><%= link_to "Рус", {locale: :ru}, class: "#{ 'active' if I18n.locale == :ru }"  %></li>
 						<li><%= link_to "Eng", {locale: :en}, class: "#{ 'active' if I18n.locale == :en }" %></li>
-						<li><%= link_to t('.sign_up'), signup_path, class: "button" %></li>
-						<li><%= link_to t('.sign_in'), new_session_path, class: "button" %></li>
+						<li><%= link_to t('layouts.header.sign_up'), signup_path, class: "button" %></li>
+						<li><%= link_to t('layouts.header.sign_in'), new_session_path, class: "button" %></li>
 					<% end %>
 		</ul>
 	</nav>
